# weave-realtime-client

./: .env.example  .gitignore  README.md  __init__.py  config.py  conversation_logger.py  idle_handler.py  logger.py  object_helpers.py  pyproject.toml  realtime.py  realtime_mcp.py  weave
rtclient/: __init__.py  defaults.py  models.py
