[project]
name = "realtime-api-local-inout-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "azure-core>=1.35.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "aiohappyeyeballs>=2.6.1",
    "aiosignal>=1.3.2",
    "annotated-types>=0.7.0",
    "anthropic>=0.63.0",
    "anyio>=4.9.0",
    "attrs>=25.3.0",
    "click>=8.1.8",
    "clickhouse-connect>=0.8.18",
    "datasets>=4.0.0",
    "diskcache>=5.6.3",
    "docker-pycreds>=0.4.0",
    "emoji>=2.14.1",
    "frozenlist>=1.5.0",
    "gitdb>=4.0.12",
    "gitpython>=3.1.44",
    "google-adk>=0.0.1",
    "gql>=3.5.2",
    "graphql-core>=3.2.4",
    "jsonschema>=4.23.0",
    "jsonschema-specifications>=2024.10.1",
    "loguru>=0.7.3",
    "multidict>=6.2.0",
    "numpy>=2.0.2",
    "openai[realtime]>=1.76.2",
    "opencv-python>=4.12.0.88",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-exporter-otlp>=1.15.0",
    "opentelemetry-exporter-prometheus-remote-write>=0.51b0",
    "opentelemetry-exporter-richconsole>=0.51b0",
    "opentelemetry-instrumentation>=0.51b0",
    "opentelemetry-instrumentation-aio-pika>=0.51b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.51b0",
    "opentelemetry-instrumentation-aiohttp-server>=0.51b0",
    "opentelemetry-instrumentation-aiokafka>=0.51b0",
    "opentelemetry-instrumentation-aiopg>=0.51b0",
    "opentelemetry-instrumentation-asgi>=0.51b0",
    "opentelemetry-instrumentation-asyncio>=0.51b0",
    "opentelemetry-instrumentation-asyncpg>=0.51b0",
    "opentelemetry-instrumentation-aws-lambda>=0.51b0",
    "opentelemetry-instrumentation-boto>=0.51b0",
    "opentelemetry-instrumentation-boto3sqs>=0.51b0",
    "opentelemetry-instrumentation-botocore>=0.51b0",
    "opentelemetry-instrumentation-cassandra>=0.51b0",
    "opentelemetry-instrumentation-celery>=0.51b0",
    "opentelemetry-instrumentation-click>=0.51b0",
    "opentelemetry-instrumentation-confluent-kafka>=0.51b0",
    "opentelemetry-instrumentation-dbapi>=0.51b0",
    "opentelemetry-instrumentation-django>=0.51b0",
    "opentelemetry-instrumentation-elasticsearch>=0.51b0",
    "opentelemetry-instrumentation-falcon>=0.51b0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-flask>=0.51b0",
    "opentelemetry-instrumentation-grpc>=0.51b0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "opentelemetry-instrumentation-jinja2>=0.51b0",
    "opentelemetry-instrumentation-kafka-python>=0.51b0",
    "opentelemetry-instrumentation-logging>=0.51b0",
    "opentelemetry-instrumentation-mysql>=0.51b0",
    "opentelemetry-instrumentation-mysqlclient>=0.51b0",
    "opentelemetry-instrumentation-openai-v2>=2.1b0",
    "opentelemetry-instrumentation-pika>=0.51b0",
    "opentelemetry-instrumentation-psycopg>=0.51b0",
    "opentelemetry-instrumentation-psycopg2>=0.51b0",
    "opentelemetry-instrumentation-pymemcache>=0.51b0",
    "opentelemetry-instrumentation-pymongo>=0.51b0",
    "opentelemetry-instrumentation-pymysql>=0.51b0",
    "opentelemetry-instrumentation-pyramid>=0.51b0",
    "opentelemetry-instrumentation-redis>=0.51b0",
    "opentelemetry-instrumentation-remoulade>=0.51b0",
    "opentelemetry-instrumentation-requests>=0.51b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.51b0",
    "opentelemetry-instrumentation-sqlite3>=0.51b0",
    "opentelemetry-instrumentation-system-metrics>=0.51b0",
    "opentelemetry-instrumentation-threading>=0.51b0",
    "opentelemetry-instrumentation-tornado>=0.51b0",
    "opentelemetry-instrumentation-tortoiseorm>=0.51b0",
    "opentelemetry-instrumentation-urllib>=0.51b0",
    "opentelemetry-instrumentation-urllib3>=0.51b0",
    "opentelemetry-instrumentation-vertexai>=0.38.12",
    "opentelemetry-instrumentation-wsgi>=0.51b0",
    "opentelemetry-propagator-aws-xray>=1.0.2",
    "opentelemetry-propagator-ot-trace>=0.51b0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-semantic-conventions>=0.51b0",
    "opentelemetry-test-utils>=0.51b0",
    "opentelemetry-util-http>=0.51b0",
    "pandas>=2.3.1",
    "pillow==11.1.0",
    "pip-system-certs>=4.0",
    "platformdirs>=4.3.6",
    "polyfile",
    "propcache>=0.3.0",
    "pyaudio>=0.2.14",
    "pydantic-core>=2.27.2",
    "pydub>=0.25.1",
    "pytest>=8.3.5",
    "python-magic>=0.4.27",
    "pyyaml>=6.0.2",
    "referencing>=0.36.2",
    "requests-toolbelt>=1.0.0",
    "rpds-py>=0.23.1",
    "sentry-sdk>=2.23.1",
    "setproctitle>=1.3.5",
    "setuptools>=76.0.0",
    "six>=1.17.0",
    "smmap>=5.0.2",
    "sniffio>=1.3.1",
    "soundfile>=0.13.1",
    "tenacity>=9.0.0",
    "torch>=2.7.1",
    "transformers>=4.54.1",
    "uuid-utils>=0.10.0",
    "vcrpy>=7.0.0",
    "wandb>=0.19.8",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
    "yarl>=1.18.3",
]
